--- a/testpages/valid.html
+++ b/testpages/valid.html
@@ -3,10 +3,13 @@
     <head>
         <title>HTMLArk test page</title>
         <meta charset="utf-8">
+        <link rel='stylesheet' href='style.css'>
+        <script src='script.js'></script>
     </head>
     <body>
         <img src='sunset.jpg'>
         <p>Sunrise near Hausdülmen, Dülmen, North Rhine-Westphalia, Germany</p>
-        <p>© Dietmar Rabich, <a href='rabich.de'>rabich.de</a>, <a href='http://creativecommons.org/licenses/by-sa/4.0/legalcode'>CC BY-SA 4.0</a>, Wikimedia Commons
+        <p>© Dietmar Rabich, <a href='rabich.de'>rabich.de</a>, <a href='http://creativecommons.org/licenses/by-sa/4.0/legalcode'>CC BY-SA 4.0</a>, Wikimedia Commons</p>
+        <p><button onclick='testalert("You clicked the link, good job")'>Test JavaScript</button></p>
     </body>
 </html>
