--- a/testpages/missing.html
+++ b/testpages/missing.html
@@ -3,10 +3,13 @@
     <head>
         <title>HTMLArk test page</title>
         <meta charset="utf-8">
+        <link rel='stylesheet' href='cssdoesnotexist'>
+        <script src='scriptdoesnotexist'></script>
     </head>
     <body>
         <img src='imagedoesnotexist'>
         <p>Sunrise near Hausdülmen, Dülmen, North Rhine-Westphalia, Germany</p>
         <p>© Dietmar Rabich, <a href='rabich.de'>rabich.de</a>, <a href='http://creativecommons.org/licenses/by-sa/4.0/legalcode'>CC BY-SA 4.0</a>, Wikimedia Commons
+        <p class='autofill'>JavaScript did not execute</p> <!-- Replaced by the linked script -->
     </body>
 </html>
