Improved test pages

--- a/testpages/missing.html
+++ b/testpages/missing.html
@@ -9,7 +9,8 @@
     <body>
         <img src='imagedoesnotexist'>
         <p>Sunrise near Hausdülmen, Dülmen, North Rhine-Westphalia, Germany</p>
-        <p>© Dietmar Rabich, <a href='rabich.de'>rabich.de</a>, <a href='http://creativecommons.org/licenses/by-sa/4.0/legalcode'>CC BY-SA 4.0</a>, Wikimedia Commons
-        <p class='autofill'>JavaScript did not execute</p> <!-- Replaced by the linked script -->
+        <p>© Dietmar Rabich, <a href='rabich.de'>rabich.de</a>, <a href='http://creativecommons.org/licenses/by-sa/4.0/legalcode'>CC BY-SA 4.0</a>, Wikimedia Commons</p>
+        <p>Image and text centered means CSS works.</p>
+        <p class='autofill'>JavaScript did not execute.</p> <!-- Replaced by the linked script -->
     </body>
 </html>
