--- a/testpages/example.html
+++ b/testpages/example.html
@@ -10,6 +10,7 @@
         <img src='sunset.jpg'>
         <p>Sunrise near Hausdülmen, Dülmen, North Rhine-Westphalia, Germany</p>
         <p>© Dietmar Rabich, <a href='rabich.de'>rabich.de</a>, <a href='http://creativecommons.org/licenses/by-sa/4.0/legalcode'>CC BY-SA 4.0</a>, Wikimedia Commons</p>
-        <p class='autofill'>JavaScript did not execute</p> <!-- Replaced by the linked script -->
+        <p>Image and text centered means CSS works.</p>
+        <p class='autofill'>JavaScript did not execute.</p> <!-- Replaced by the linked script -->
     </body>
 </html>
