--- a/testpages/unknownprot.html
+++ b/testpages/unknownprot.html
@@ -3,10 +3,14 @@
     <head>
         <title>HTMLArk test page</title>
         <meta charset="utf-8">
+        <link rel='stylesheet' href='ftp://example.com/style.css'>
+        <script src='ftp://example.com/script.js'></script>
     </head>
     <body>
         <img src='ftp://example.com/sunset.jpg'>
         <p>Sunrise near Hausdülmen, Dülmen, North Rhine-Westphalia, Germany</p>
-        <p>© Dietmar Rabich, <a href='rabich.de'>rabich.de</a>, <a href='http://creativecommons.org/licenses/by-sa/4.0/legalcode'>CC BY-SA 4.0</a>, Wikimedia Commons
+        <p>© Dietmar Rabich, <a href='rabich.de'>rabich.de</a>, <a href='http://creativecommons.org/licenses/by-sa/4.0/legalcode'>CC BY-SA 4.0</a>, Wikimedia Commons</p>
+        <p>Image and text centered means CSS works.</p>
+        <p class='autofill'>JavaScript did not execute.</p> <!-- Replaced by the linked script -->
     </body>
 </html>
