--- a/tests/testpages/unknownprot.html
+++ b/tests/testpages/unknownprot.html
@@ -3,14 +3,13 @@
     <head>
         <title>HTMLArk test page</title>
         <meta charset="utf-8">
-        <link rel='stylesheet' href='style.css'>
-        <script src='script.js'></script>
+        <link rel='stylesheet' href='ftp://example.com/style.css'>
+        <script src='ftp://example.com/script.js'></script>
     </head>
     <body>
-        <img src='sunset.jpg'>
+        <img src='ftp://example.com/sunset.jpg'>
         <p>Sunrise near Hausdülmen, Dülmen, North Rhine-Westphalia, Germany</p>
         <p>© Dietmar Rabich, <a href='rabich.de'>rabich.de</a>, <a href='http://creativecommons.org/licenses/by-sa/4.0/legalcode'>CC BY-SA 4.0</a>, Wikimedia Commons</p>
-        <p>Image and text centered means CSS works.</p>
-        <p class='autofill'>JavaScript did not execute.</p> <!-- Replaced by the linked script -->
+        <p>Test page for unkown protocols (e.g. ftp://). HTMLArk should provide errors when it encounters non-HTTP/non-local file URLs.</p>
     </body>
 </html>
